# data_project_standard_kit

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  to_do.txt
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: etl.py  extract.py  load.py  transform.py
app/utils/: data_generator.py
data/input/: employee_absence_data_0.xlsx  employee_absence_data_1.xlsx  employee_absence_data_10.xlsx  employee_absence_data_11.xlsx  employee_absence_data_12.xlsx  employee_absence_data_13.xlsx  employee_absence_data_14.xlsx  employee_absence_data_15.xlsx  employee_absence_data_16.xlsx  employee_absence_data_17.xlsx  employee_absence_data_18.xlsx  employee_absence_data_19.xlsx  employee_absence_data_2.xlsx  employee_absence_data_20.xlsx  employee_absence_data_21.xlsx  employee_absence_data_22.xlsx  employee_absence_data_23.xlsx  employee_absence_data_24.xlsx  employee_absence_data_25.xlsx  employee_absence_data_26.xlsx  employee_absence_data_27.xlsx  employee_absence_data_28.xlsx  employee_absence_data_29.xlsx  employee_absence_data_3.xlsx  employee_absence_data_30.xlsx  employee_absence_data_31.xlsx  employee_absence_data_32.xlsx  employee_absence_data_33.xlsx  employee_absence_data_34.xlsx  employee_absence_data_35.xlsx  employee_absence_data_36.xlsx  employee_absence_data_37.xlsx  employee_absence_data_38.xlsx  employee_absence_data_39.xlsx  employee_absence_data_4.xlsx  employee_absence_data_40.xlsx  employee_absence_data_41.xlsx  employee_absence_data_42.xlsx  employee_absence_data_43.xlsx  employee_absence_data_44.xlsx  (+10 more)
details/: index.html
docs/: details.md  index.md
search/: search_index.json
tests/: test_integration.py  test_unit.py
(+1 files in other folders)
