[tool.poetry]
name = "standard-kit"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"
pandas = "^3.0.0"
openpyxl = "^3.1.5"
faker = "^40.1.2"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
