[tool.poetry]
name = "standard-kit"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"
pandas = "^3.0.0"
openpyxl = "^3.1.5"
faker = "^40.1.2"
pytest = "^9.0.2"
taskipy = "^1.14.1"
mkdocs = "^1.6.1"
mkdocstrings-python = "^2.0.2"
pygments = "^2.19.2"
mkdocs-material = "^9.7.1"
pymdown-extensions = "^10.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = "poetry run python app/main.py"
doc = "mkdocs serve"
